# cryptocrate

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  format.rs  inspect.rs  interactive.rs  keyfile.rs  main.rs  metadata.rs  secure_delete.rs  streaming.rs
src/compression/: mod.rs
src/crypto/: encryption.rs  key_derivation.rs  mod.rs
src/file_handler/: mod.rs  walker.rs
