[package]
name = "cryptocrate"
version = "1.0.0"
edition = "2021"
authors = ["Dmytro Vlasiuk <tamarkaflop@icloud.com>"]
description = "A fast, user-friendly file and folder encryption tool with strong cryptography"
license = "MIT"
repository = "https://github.com/dmytro-macuser/cryptocrate"
keywords = ["encryption", "security", "crypto", "files", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rpassword = "7.3"

# File handling
walkdir = "2"

# Compression
zstd = "0.13"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "encryption_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
